--- a/config/example_config.yaml
+++ b/config/example_config.yaml
@@ -1,61 +1,26 @@
 ---
 global:  # generall configs effecting one or multiple parts
-  threads: 1
+  threads: 30
   assignments:
     split_number: 1  # number of files fastq should be split for parallelization
 assignments:
-  exampleAssignment:  # name of an example assignment (can be any string)
+  assignIGVFDesign:  # name of an example assignment (can be any string)
     bc_length: 15
     sequence_length:  # sequence length of design excluding adapters.
-      min: 195
-      max: 205
+      min: 265
+      max: 275
     alignment_start:  # start of an alignment in the reference. Here using 15 bp adapters. Can be different when using adapter free approaches
       min: 15  # integer
       max: 17  # integer
     min_mapping_quality: 1  # integer >=0 Please use 1 when you have oligos that differ by 1 base in your reference/design file
     FW:
-      - resources/Assignment_BasiC/R1.fastq.gz
+      - /fast/groups/ag_kircher/MPRA/IGVF_Y1_design/resources/association_data/association1/IGVF_neuro_S1_R1_001.fastq.gz
     BC:
-      - resources/Assignment_BasiC/R2.fastq.gz
+      - /fast/groups/ag_kircher/MPRA/IGVF_Y1_design/resources/association_data/association1/IGVF_neuro_S1_R2_001.fastq.gz
     REV:
-      - resources/Assignment_BasiC/R3.fastq.gz
-    reference: resources/design.fa
+      - /fast/groups/ag_kircher/MPRA/IGVF_Y1_design/resources/association_data/association1/IGVF_neuro_S1_R3_001.fastq.gz
+    reference: /fast/groups/ag_kircher/MPRA/IGVF_Y1_design/resources/association_data/design.fa
     configs:
       exampleAssignmentConfig:  # name of an example filtering config
         min_support: 3
         fraction: 0.7
-experiments:
-  exampleCount:
-    bc_length: 15
-    umi_length: 10
-    data_folder: resources/Count_Basic/data
-    experiment_file: resources/example_experiment.csv
-    demultiplex: false
-    assignments:
-      fromFile:
-        type: file
-        assignment_file: resources/SRR10800986_filtered_coords_to_barcodes.tsv.gz
-      fromWorkflow:
-        type: config
-        assignment_name: exampleAssignment
-        assignment_config: exampleAssignmentConfig
-    design_file: resources/design.fa
-    label_file: resources/labels.tsv  # optional
-    configs:
-      exampleConfig:
-        filter:
-          bc_threshold: 10
-          DNA:
-            min_counts: 1
-          RNA:
-            min_counts: 1
-        sampling:  # optional, just for benmarking
-          DNA:
-            total: 30000000
-            threshold: 300
-          RNA:
-            total: 50000000
-            threshold: 300
-    variants:  # optional
-      map: resources/variant_map.tsv
-      min_barcodes: [5, 10]  # min BC for ref and alt sequence
